[gd_scene load_steps=18 format=2]

[ext_resource path="res://Fonts/Roboto/Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Shop.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 47
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=12]

[sub_resource type="DynamicFont" id=2]
size = 33
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.486275, 0.988235, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.486275, 0.988235, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 1, 1, 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=14]
size = 19
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 20
font_data = ExtResource( 1 )

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 1024.0
color = Color( 0.529412, 0.807843, 0.921569, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 112.0
margin_right = 482.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 1 )
text = "Upgrades"
align = 1
valign = 1

[node name="MoneyLabel" type="Label" parent="."]
margin_left = 180.0
margin_top = 170.0
margin_right = 350.0
margin_bottom = 226.0
custom_fonts/font = SubResource( 13 )
text = "Money: "

[node name="FertilizerCont" type="VBoxContainer" parent="."]
margin_left = -1.0
margin_top = 307.0
margin_right = 575.0
margin_bottom = 458.0

[node name="Description1" type="Label" parent="FertilizerCont"]
margin_right = 576.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
text = "Increase Grass Sell Value"
align = 1
valign = 1

[node name="Fertilizer" type="Button" parent="FertilizerCont"]
margin_top = 37.0
margin_right = 576.0
margin_bottom = 77.0
theme = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 5 )
text = "Fertilizer"

[node name="Cost1" type="Label" parent="FertilizerCont"]
margin_top = 81.0
margin_right = 576.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 3 )
text = "Cost: 50"
align = 1
valign = 1

[node name="Level1" type="Label" parent="FertilizerCont"]
margin_top = 118.0
margin_right = 576.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 3 )
text = "Current Level: 0"
align = 1
valign = 1

[node name="IrrigationCont" type="VBoxContainer" parent="."]
margin_left = 1.0
margin_top = 544.0
margin_right = 575.0
margin_bottom = 763.0

[node name="Description2" type="Label" parent="IrrigationCont"]
margin_right = 574.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
text = "Increase Grass Growing Speed"
align = 1
valign = 1

[node name="Irrigation" type="Button" parent="IrrigationCont"]
margin_top = 37.0
margin_right = 574.0
margin_bottom = 77.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/normal = SubResource( 6 )
text = "Irrigation"

[node name="Cost2" type="Label" parent="IrrigationCont"]
margin_top = 81.0
margin_right = 574.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 3 )
text = "Cost: 50"
align = 1
valign = 1

[node name="Level2" type="Label" parent="IrrigationCont"]
margin_top = 118.0
margin_right = 574.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 3 )
text = "Current Level: 0"
align = 1
valign = 1

[node name="BackButton" type="Button" parent="."]
margin_left = 164.0
margin_top = 870.0
margin_right = 392.0
margin_bottom = 954.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Back"

[node name="AutoGrowCont" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Description3" type="Label" parent="AutoGrowCont"]
margin_right = 154.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 14 )
text = "Rest your fingers!"

[node name="AutoGrow" type="Button" parent="AutoGrowCont"]
margin_top = 27.0
margin_right = 154.0
margin_bottom = 67.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/normal = SubResource( 6 )
text = "AutoGrow"

[node name="autoMultiLabel" type="Label" parent="AutoGrowCont"]
margin_top = 71.0
margin_right = 154.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 15 )

[connection signal="pressed" from="FertilizerCont/Fertilizer" to="." method="_on_Fertilizer_pressed"]
[connection signal="pressed" from="IrrigationCont/Irrigation" to="." method="_on_Irrigation_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="AutoGrowCont/AutoGrow" to="." method="_on_AutoGrow_pressed"]
